# data-questionnaire-agent

./: .dockerignore  .env.docker  .env.local  .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  SQL_LITE_DB.db  SQL_LITE_DB.db_felipe  activate.ps1  build_docker.ps1  config.env  data-questionnaire-agent.code-workspace  data_wellness_prompts_de.toml  data_wellness_prompts_en.toml  demo.py  deploy_ui.sh  format.ps1  hypergility_prompts_de.toml  hypergility_prompts_en.toml  index.html  init.sh  main.py  notes.md  package-lock.json  package.json  prompts.toml  prompts_de.toml  prompts_en.toml  prompts_fa.toml  prompts_pt.toml  prompts_pt_refugiados.toml  pyproject.toml  run.sh  run_all.ps1  run_app.sh  run_hello.sh  server.js  start.ps1  (+2 more)
.chainlit/: config.toml
data/: deep_research_output.json  deep_research_output.md  dump_db.ps1  dump_db.sh  import_db.bat  questionnaire.pkl  questionnaire_all.pkl  report_doc_classification_01JDYZ52AD3KYM2Q7VF5NHV3ER.json  report_item_count_01JDZBAA5T6Z0MHZ10KY0HF938.json  sample_questionnaire1.md  sample_questionnaire2.md  sample_questionnaire3.md
data_questionnaire_agent/: build.py  config.py  config_server.py  config_support.py  db_config.py  log_init.py  toml_support.py  translation.py
data_questionnaire_agent/bootstrap/: __init__.py  consultant_loader.py  global_config_loader.py  sql_script.py
data_questionnaire_agent/cli/: data_questionnaire_agent_cli.py  prompt_to_db_loader.py
data_questionnaire_agent/model/: application_schema.py  confidence_schema.py  consultant_rating.py  context.py  context_documents.py  deep_research.py  deep_research_input.py  global_configuration.py  initial_question.py  initial_question_data.py  jwt_token.py  languages.py  mail_data.py  ontology_schema.py  openai_schema.py  prompt.py  question_suggestion.py  questionnaire_status.py  report_advice_schema.py  report_aggregation_schema.py  server_model.py  session_configuration.py  session_data.py
data_questionnaire_agent/server/: advice_service.py  agent_session.py  clarifications_agent.py  initial_question_service.py  mail_sender.py  middleware.py  persistence_service_async.py  question_clarifications.py  question_generation_service.py  questionnaire_server.py  questionnaire_server_backend.py  questionnaire_server_configuration.py  questionnaire_server_consultants.py  questionnaire_server_deep_research.py  questionnaire_server_main.py  questionnaire_server_prompts.py  questionnaire_server_session.py  secondary_question_processor.py  server_support.py  similarity_search.py  socket_commands.py
data_questionnaire_agent/service/: add_more_suggestions_service.py  advice_service.py  clarifications_agent.py  confidence_service.py  consultant_service.py  context_service.py  context_service_support.py  db_bootstrap_service.py  deep_research.py  embedding_service.py  graph_service.py  graphrag_service.py  html_generator.py  image_generation_service.py  image_import_service.py  initial_question_service.py  jwt_token_service.py  knowledge_base_service.py  language_adapter.py  mail_sender.py  ontology_service.py  persistence_deep_research_async.py  persistence_service_async.py  persistence_service_consultants_async.py  persistence_service_context_documents.py  persistence_service_prompt_async.py  persistence_service_questions_async.py  prompt_support.py  query_support.py  question_clarifications.py  question_generation_service.py  report_aggregation_main_service.py  report_aggregation_service.py  report_aggregation_summarization_service.py  report_enhancement_service.py  report_interactions_service.py  secondary_question_processor.py  similarity_search.py  tagging_service.py
data_questionnaire_agent/test/: add_more_suggestions_service_test.py  advice_service_test.py  conditional_advice_test.py  confidence_schema_test.py  confidence_service_test.py  consultant_service_test.py  graph_service_test.py  graphrag_service_test.py  initial_question_service_test.py  jwt_token_service.py  jwt_token_service_test.py  mail_sender_test.py  ontology_service_test.py  persistence_service_async_test.py  persistence_service_consultants_async_test.py  persistence_service_questions_async_test.py  question_answer_test.py  question_generation_service_test.py  questionnaire_server_test.py  questionnaire_status_test.py  report_aggregation_main_service_test.py  report_aggregation_service_test.py  report_aggregation_summarization_service_test.py  report_enhancement_service_test.py  server_message_test.py  session_configuration_test.py  toml_support_test.py
data_questionnaire_agent/test2/: advice_service_test.py  (+2 more)
docs/: advice_agent.bpmn  agent_interaction_flow.bpmn  data_wellness_workflow.bpmn
i18n/: messages.de.yml  messages.en.yml  messages.fa.yml  messages.pt.yml
project_root/: prompts.toml
sql/: README.md  consultant_setup.sql  db_creation_default.sql  db_creation_hypergility.sql  db_setup.sql  hypergility_setup.sql  init_data_eng.sql  initial_data copy.sql  initial_data.sql  initial_data_farsi.sql  initial_data_german.sql  other_queries.sql  tb_config.template.sql  verification_queries.sql
src/: App.tsx  index.css
templates/: consultants-template.md  mail-template.html  results-template.html
tmp/: ONEPOINT_SQL_LITE_DB.db  SQL_LITE_DB.db  prompts.toml  prompts_pt.toml
ui/: index.html
wheels/: chainlit-0.7.4-py3-none-any.whl
(+157 files in other folders)
