[tool.poetry]
name = "data-questionnaire-agent"
version = "0.2.0"
description = "Implementation of an agent which asks questions and gives advices about a predefined question."
authors = ["Gil Fernandes <gil.fernandes@onepointltd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.37.0"
langchain = "^0.3.8"
langchain-community = "0.3.8"
prompt-toolkit = "^3.0.39"
tomli = "^2.0.1"
faiss-cpu = "^1.7.4"
tiktoken = "^0.7.0"
python-dotenv = "^1.0.0"
pydantic = "2.7.4"
duckduckgo-search = "^3.8.5"
pdfkit = "^1.0.0"
opencv-python = "^4.8.1.78"
scikit-image = "^0.22.0"
tenacity = "^8.2.3"
psycopg = {extras = ["binary"], version = "^3.1.18"}
aiohttp = "^3.9.3"
langchain-openai = "^0.2.10"
python-socketio = "^5.11.2"
asyncer = "^0.0.5"
jinja2 = "^3.1.3"
python-i18n = {extras = ["yaml"], version = "^0.3.9"}
python-ulid = "^2.7.0"
pyjwt = "^2.9.0"
pandas = "^2.2.3"
xlsxwriter = "^3.2.0"

[tool.poetry.scripts]
build-ui = "data_questionnaire_agent.build:ui"
build-check = "data_questionnaire_agent.build:check"
run = "data_questionnaire_agent.server.questionnaire_server_main:run_server"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.11.0"
ruff = "^0.4.8"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"
lint.extend-select = ["I"]
