[project]
name = "data-questionnaire-agent"
version = "0.2.0"
description = "Implementation of an agent which asks questions and gives advices about a predefined question."
authors = [{ name = "Gil Fernandes", email = "gil.fernandes@onepointltd.com" }]
requires-python = "~=3.13"
readme = "README.md"
dependencies = [
    "openai>=1.37.0,<2",
    "langchain>=0.3.16,<0.4",
    "langchain-community==0.3.16",
    "prompt-toolkit>=3.0.39,<4",
    "tomli>=2.0.1,<3",
    "faiss-cpu>=1.7.4,<2",
    "tiktoken>=0.8.0,<0.9",
    "python-dotenv>=1.0.0,<2",
    "pydantic==2.10.6",
    "duckduckgo-search>=3.8.5,<4",
    "pdfkit>=1.0.0,<2",
    "opencv-python>=4.8.1.78,<5",
    "scikit-image>=0.25.1,<0.26",
    "tenacity>=8.2.3,<9",
    "psycopg[binary]>=3.1.18,<4",
    "aiohttp>=3.9.3,<4",
    "langchain-openai>=0.2.10,<0.3",
    "python-socketio>=5.11.2,<6",
    "asyncer>=0.0.5,<0.0.6",
    "jinja2>=3.1.3,<4",
    "python-i18n[yaml]>=0.3.9,<0.4",
    "python-ulid>=2.7.0,<3",
    "pyjwt>=2.9.0,<3",
    "pandas>=2.2.3,<3",
    "xlsxwriter>=3.2.0,<4",
    "openpyxl>=3.1.5,<4",
    "consultant-info-generator",
]

[project.scripts]
build-ui = "data_questionnaire_agent.build:ui"
build-check = "data_questionnaire_agent.build:check"
run = "data_questionnaire_agent.server.questionnaire_server_main:run_server"
generate_tokens = "data_questionnaire_agent.service.jwt_token_service:generate_from_file_cmdline"

[dependency-groups]
dev = [
    "pytest>=7.4.2,<8",
    "black>=23.11.0,<24",
    "ruff>=0.4.8,<0.5",
    "pytest-aiohttp>=1.0.5,<2",
]

[tool.uv]

[tool.uv.sources]
consultant-info-generator = { git = "https://github.com/OnepointConsultingLtd/consultant_info_generator.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py39"
lint.extend-select = ["I"]
